no longer using local spigot jar

--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,8 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>amalgam</version>
-            <scope>system</scope>
-            <systemPath>E:/Projects/Java Projects/Libraries/Spigot/spigot.jar</systemPath>
+            <version>1.16.5-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.mojang</groupId>
